--- a/examples/visualize-optick/CMakeLists.txt
+++ b/examples/visualize-optick/CMakeLists.txt
@@ -5,7 +5,9 @@ find_package(Optick QUIET)
 
 if(Optick_FOUND)
     add_executable(visualize-optick ${PROJECT_SOURCE_DIR}/visualize-optick.c)
-    # Required POSIX version for nanosleep, clock_gettime
-    target_compile_definitions(visualize-optick PRIVATE _POSIX_C_SOURCE=199309L)
+    if(UNIX)
+        # Required POSIX version for nanosleep, clock_gettime
+        target_compile_definitions(visualize-optick PRIVATE _POSIX_C_SOURCE=199309L)
+    endif()
     target_link_libraries(visualize-optick PRIVATE deadlock OptickCore)
 endif()
