--- a/examples/http-server/CMakeLists.txt
+++ b/examples/http-server/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.9)
 project(http-server VERSION 1 LANGUAGES C)
 
-add_executable(http-server ${PROJECT_SOURCE_DIR}/http-server.c)
-# Required POSIX version for networking components
-target_compile_definitions(http-server PRIVATE _POSIX_C_SOURCE=200112L)
-target_link_libraries(http-server PRIVATE deadlock)
+if(UNIX)
+    add_executable(http-server ${PROJECT_SOURCE_DIR}/http-server.c)
+    # Required POSIX version for networking components
+    target_compile_definitions(http-server PRIVATE _POSIX_C_SOURCE=200112L)
+    target_link_libraries(http-server PRIVATE deadlock)
+endif()
