--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,10 @@ set(CMAKE_C_EXTENSIONS        OFF)
 # Try to compile release
 set(DEFAULT_BUILD_TYPE "Release")
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-    message(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
-    set(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
-    # Set the possible values of build type for cmake-gui
-    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+	message(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
+	set(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
+	# Set the possible values of build type for cmake-gui
+	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
 endif()
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
@@ -23,29 +23,28 @@ set(DEADLOCK_MSVC_WARNFLAGS /W4 /WX)
 set(DEADLOCK_OTHR_WARNFLAGS -Wall -Werror -Wextra)
 add_compile_options("$<IF:$<C_COMPILER_ID:MSVC>,${DEADLOCK_MSVC_WARNFLAGS},${DEADLOCK_OTHR_WARNFLAGS}>")
 
-set(DEADLOCK_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/async.c
-    ${PROJECT_SOURCE_DIR}/src/sched.c
-    ${PROJECT_SOURCE_DIR}/src/tqueue.c
-    ${PROJECT_SOURCE_DIR}/src/worker.c)
+set(DEADLOCK_SOURCES ${PROJECT_SOURCE_DIR}/src/async.c
+                     ${PROJECT_SOURCE_DIR}/src/sched.c
+                     ${PROJECT_SOURCE_DIR}/src/tqueue.c
+                     ${PROJECT_SOURCE_DIR}/src/worker.c)
 add_library(deadlock ${DEADLOCK_SOURCES})
 target_include_directories(deadlock PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_link_libraries(deadlock PUBLIC Threads::Threads)
 
 # Required POSIX version for nanosleep in src/sched.c
 if(UNIX)
-    target_compile_definitions(deadlock PRIVATE _POSIX_C_SOURCE=199309L)
+	target_compile_definitions(deadlock PRIVATE _POSIX_C_SOURCE=199309L)
 endif()
 
 option(DEADLOCK_BUILD_SAN "Build with sanitizers" OFF)
 if(DEADLOCK_BUILD_SAN)
-    target_compile_options(deadlock PUBLIC -fsanitize=address,leak,undefined,pointer-compare,pointer-subtract -fstack-protector)
-    target_link_options   (deadlock PUBLIC -fsanitize=address,leak,undefined,pointer-compare,pointer-subtract -fstack-protector)
+	target_compile_options(deadlock PUBLIC -fsanitize=address,leak,undefined,pointer-compare,pointer-subtract -fstack-protector)
+	target_link_options   (deadlock PUBLIC -fsanitize=address,leak,undefined,pointer-compare,pointer-subtract -fstack-protector)
 endif()
 
 option(DEADLOCK_BUILD_TUNE "Build for this architecture" OFF)
 if(DEADLOCK_BUILD_TUNE)
-    target_compile_options(deadlock PUBLIC -march=native)
+	target_compile_options(deadlock PUBLIC -march=native)
 endif()
 
 export(TARGETS deadlock FILE deadlock-config.cmake)
@@ -54,6 +53,6 @@ export(PACKAGE deadlock)
 option(DEADLOCK_BUILD_EXAMPLES "Build example programs" OFF)
 mark_as_advanced(FORCE DEADLOCK_BUILD_EXAMPLES)
 if(DEADLOCK_BUILD_EXAMPLES)
-    add_subdirectory(examples/http-server)
-    add_subdirectory(examples/visualize-optick)
+	add_subdirectory(examples/http-server)
+	add_subdirectory(examples/visualize-optick)
 endif()
