Made dltask opaque to make extension and profiling easier. Begin implementing profiling. Fixed potential use after free of task object after invocation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ set(DEADLOCK_MSVC_WARNFLAGS /W4 /WX)
 set(DEADLOCK_OTHR_WARNFLAGS -Wall -Werror -Wextra)
 add_compile_options("$<IF:$<C_COMPILER_ID:MSVC>,${DEADLOCK_MSVC_WARNFLAGS},${DEADLOCK_OTHR_WARNFLAGS}>")
 
-set(DEADLOCK_SOURCES ${PROJECT_SOURCE_DIR}/src/async.c
+set(DEADLOCK_SOURCES ${PROJECT_SOURCE_DIR}/src/dl.c
                      ${PROJECT_SOURCE_DIR}/src/sched.c
                      ${PROJECT_SOURCE_DIR}/src/tqueue.c
                      ${PROJECT_SOURCE_DIR}/src/worker.c)
