--- a/examples/visualize-optick/CMakeLists.txt
+++ b/examples/visualize-optick/CMakeLists.txt
@@ -10,4 +10,6 @@ if(Optick_FOUND)
 		target_compile_definitions(visualize-optick PRIVATE _POSIX_C_SOURCE=199309L)
 	endif()
 	target_link_libraries(visualize-optick PRIVATE deadlock OptickCore)
+else()
+	message(STATUS "Skipping examples/visualize-optick because it requires Optick.")
 endif()
