--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,7 @@ option(DEADLOCK_BUILD_EXAMPLES "Build example programs" OFF)
 mark_as_advanced(FORCE DEADLOCK_BUILD_EXAMPLES)
 if(DEADLOCK_BUILD_EXAMPLES)
 	add_subdirectory(examples/http-server)
+	add_subdirectory(examples/idle)
 	add_subdirectory(examples/latency)
 	add_subdirectory(examples/pretty-profile)
 	add_subdirectory(examples/visualize-optick)
