Replaced useless "HTTP" server with TCP echo server.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ endif()
 option(DEADLOCK_BUILD_EXAMPLES "Build examples" OFF)
 mark_as_advanced(FORCE DEADLOCK_BUILD_EXAMPLES)
 if(DEADLOCK_BUILD_EXAMPLES)
-	add_subdirectory(examples/http-server)
+	add_subdirectory(examples/echo-server)
 	add_subdirectory(examples/idle)
 	add_subdirectory(examples/pretty-profile)
 	add_subdirectory(examples/visualize-optick)
