When installed the DEADLOCK_GRAPH_EXPORT compile time macro would break everything unless the library and application were compiled with the same definition. To fix this, I've made inline.h a templated file. Now whether or not the library was build with graph export capability is well defined.

--- a/include/deadlock/internal.h.in
+++ b/include/deadlock/internal.h.in
@@ -5,7 +5,7 @@
 #include <stddef.h>
 
 /* Determined at compile time by cmake configure_file */
-#define DEADLOCK_GRAPH_EXPORT
+#cmakedefine DEADLOCK_GRAPH_EXPORT
 
 #ifndef DEADLOCK_GRAPH_EXPORT
 
